--- a/404.html
+++ b/404.html
@@ -219,6 +219,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/latexmk/">texファイルが変更されると，自動的にcompileしてskimでのpdfも自動で更新されるようにする．</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/japanese_setup/">Emacsの設定（その3）ようやくinit.orgの記述: 日本語の設定，inline-patchの設定など</a></li>
   </ul>
   
